--- a/main.html
+++ b/main.html
@@ -9,9 +9,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<button type="button" class="btn btn-primary">Primary</button>
-<button type="button" class="btn btn-secondary">Secondary</button>
-<button type="button" class="btn btn-success">Success</button>
+	<button  id="button-1" type="button" class="btn btn-primary">Button1</button>
+<button  id="button-2" type="button" class="btn btn-secondary">Button2</button>
+<button id="button-3" type="button" class="btn btn-success">Button3</button>
+<button  id ="button-4"type="button" class="btn btn-primary btn-sm"> Button4</button>
+<div class="d-grid gap-2">
+  <button id="button-5" class="btn btn-primary" type="button">Button5</button>
+  
+</div>
+<button  id="button-6" type="button" class="btn btn-primary">Button6</button>
+	<button  id="button-7" type="button" class="btn btn-secondary" disabled>Button7</button>
+	<button  id="button-8" type="button" class="btn btn-link">Link</button>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
 </script>
