--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
   
 </div>
 <button  id="button-6" type="button" class="btn btn-primary">Button6</button>
-	<button  id="button-7" type="button" class="btn btn-secondary" disabled>Button7</button>
+	<button id="button-7" type="button" class="btn btn-light">Light</button>
 	<button  id="button-8" type="button" class="btn btn-link">Link</button>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
