--- a/main.html
+++ b/main.html
@@ -10,16 +10,13 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<button  id="button-1" type="button" class="btn btn-primary">Button1</button>
-<button  id="button-2" type="button" class="btn btn-secondary">Button2</button>
+<button  id="button-2" type="button" class="btn btn-outline-secondary">Button2</button>
 <button id="button-3" type="button" class="btn btn-success">Button3</button>
-<button  id ="button-4"type="button" class="btn btn-primary btn-sm"> Button4</button>
-<div class="d-grid gap-2">
-  <button id="button-5" class="btn btn-primary" type="button">Button5</button>
-  
-</div>
-<button  id="button-6" type="button" class="btn btn-primary">Button6</button>
-	<button id="button-7" type="button" class="btn btn-light">Light</button>
-	<button  id="button-8" type="button" class="btn btn-link">Link</button>
+<button  id ="button-4"type="button" class="btn btn-danger btn-sm"> Button4</button>
+<button  id="button-5" type="button" class="btn btn-warning btn-lg btn-block">Button5</button>
+   <button id="button-6" type="button" class="btn btn-info disabled">Button6</button>
+	<button id="button-7" type="button" class="btn btn-light">Button7</button>
+	<button  id="button-8" type="button" class="btn btn-link">Button8</button>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./script.js">
 </script>
