--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<!-- the entire body must be written by student -->
 	<button  id="button-1" type="button" class="btn btn-primary">Button1</button>
 <button  id="button-2" type="button" class="btn btn-outline-secondary">Button2</button>
-<button id="button-3" type="button" class="btn btn-success">Button3</button>
+<button id="button-3" type="button" class="btn btn-success btn-lg">Button3</button>
 <button  id ="button-4"type="button" class="btn btn-danger btn-sm"> Button4</button>
 <button  id="button-5" type="button" class="btn btn-warning btn-lg btn-block">Button5</button>
    <button id="button-6" type="button" class="btn btn-info disabled">Button6</button>
